; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_load-jpeg.c_fill_input_buffer.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_load-jpeg.c_fill_input_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.jpeg_source_mgr* }
%struct.jpeg_source_mgr = type { i8*, i32 }

@fill_input_buffer.eoi = internal global [2 x i8] c"\FF\80", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @fill_input_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fill_input_buffer(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.jpeg_source_mgr*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load %struct.jpeg_source_mgr*, %struct.jpeg_source_mgr** %5, align 8
  store %struct.jpeg_source_mgr* %6, %struct.jpeg_source_mgr** %3, align 8
  %7 = load %struct.jpeg_source_mgr*, %struct.jpeg_source_mgr** %3, align 8
  %8 = getelementptr inbounds %struct.jpeg_source_mgr, %struct.jpeg_source_mgr* %7, i32 0, i32 0
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @fill_input_buffer.eoi, i64 0, i64 0), i8** %8, align 8
  %9 = load %struct.jpeg_source_mgr*, %struct.jpeg_source_mgr** %3, align 8
  %10 = getelementptr inbounds %struct.jpeg_source_mgr, %struct.jpeg_source_mgr* %9, i32 0, i32 1
  store i32 2, i32* %10, align 8
  ret i32 1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
